exports[`<Logo/> renders correctly 1`] = `
<Link
  replace={false}
  to="/">
  <img
    className="logo"
    src="/images/soofka-logo-2.jpg" />
</Link>
`;

exports[`<Logo/> renders correctly with optional props 1`] = `
<Link
  replace={false}
  to="/">
  <img
    className="logo"
    src="/images/soofka-logo-1.jpg" />
</Link>
`;
